Ensure when we have no avatar, the default username (that could be up to 30 chars) is clipped in the header + adjust padding to fit

--- a/assets/styles/components/_header.scss
+++ b/assets/styles/components/_header.scss
@@ -55,6 +55,21 @@
     padding-bottom: .6rem;
   }
 
+  .login{
+
+    @include media-breakpoint-down(sm) {   
+      
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 100px;
+      padding-left: 5px;
+      padding-right: 5px;
+
+    }
+
+  }
+
   .login.has-avatar{
     display: flex;
     align-items: center;
